# SkinCancerViT

./: .dockerignore  .gitignore  Dockerfile  README.md  SERVER_STATUS.md  WEBAPP_SETUP.md  docker_entrypoint.sh  main.py  pyproject.toml  run.py  start_all.sh  start_backend.sh  start_frontend.sh  test.py  train.py
.github/workflows/: build-and-push-docker.yaml
benchmarks/: predictions_20250721_201539.csv  validation_set.txt
skincancer_vit/: data.py  flask_api.py  gradio_app.py  model.py  test.py  train.py  xai_utils.py
website/: package-lock.json  package.json
website/src/: App.css  App.tsx  index.css
