[project]
name = "skincancervit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "datasets>=4.0.0",
    "evaluate>=0.4.5",
    "pillow>=11.3.0",
    "safetensors>=0.5.3",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "transformers[torch]>=4.53.2",
]
